# cocktailed

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Body.js  Filters.js  Header.js
frontend/src/components/filters/: FilterHolders.js
frontend/src/styles/: FontStyles.js
