[tool.poetry]
name = "cocktailed-api"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["uvicorn"], version = "^0.111.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
